--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <title>Voice Recognition</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <button class="talk">Talk</button>
-        <h3 class="content"></h3>
+        <div class="main">
+            <button class="talk">Talk</button>
+            <h3 class="content"></h3>
+        </div>
         <script src="./app.js" async defer></script>
     </body>
 </html>
